--- a/stylesheet-contact.css
+++ b/stylesheet-contact.css
@@ -145,6 +145,7 @@ textarea {
 #copyright {
 	color: #d1d1d1;
 	text-align: center;
+	position: fixed;
 	width: 100%; 
 	bottom: 0px;
 	font-family: Courier;}
