--- a/stylesheet-imcp.css
+++ b/stylesheet-imcp.css
@@ -148,6 +148,7 @@ h2 {
 #copyright {
 	color: #d1d1d1;
 	text-align: center;
-	width: 100%; 
+	width: 100%;
+	position: absolute;
 	bottom: 0px;
 	font-family: Courier;}
