--- a/stylesheet-web.css
+++ b/stylesheet-web.css
@@ -140,6 +140,7 @@ li a:hover {background-color: #7D7D7D;}
 	margin-top: 60px;
 	color: #d1d1d1;
 	text-align: center;
-	width: 100%; 
+	width: 100%;
+	position: absolute;
 	bottom: 0px;
 	font-family: Courier;}
